Feature jdk8 grammer exec (#22)
* init

* update

* rm some log